small swagger docs fix
